--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: 14.29.124.174, port: 11006, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇦 加拿大-325.6KB/s(Youtube:不良林), server: ca-trojan.bonds.id, port: 443, type: trojan, password: YWVzL604-4fbe-a70bYWVzLTI1Ni1nY2ac5a3ef0-b4ab-11eb-b65e-1239d0255272, sni: ca-trojan.bonds.id, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-223.9KB/s(Youtube:不良林), server: 213.183.59.211, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 🇺🇸 美国-1.10MB/s(Youtube:不良林), server: 167.88.61.50, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林), server: 165.154.243.208, port: 28443, type: trojan, password: f788c9d5-2100-4378-b3b2-5e7ed9de9150, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-499.8KB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: 198.200.51.219, port: 26969, type: trojan, password: 151dada5-c12e-4eb3-940e-d93f365f8a4a, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-422.8KB/s(Youtube:不良林), server: gz-cm1-kl.hinetwork.tw, port: 11112, type: trojan, password: d46abf38-3a4c-3dfc-91e0-d8d3f1616c73, sni: gz-cm1-kl.hinetwork.tw, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-770.0KB/s(Youtube:不良林), server: gz-cm-kl.hinetwork.tw, port: 11199, type: trojan, password: d46abf38-3a4c-3dfc-91e0-d8d3f1616c73, sni: gz-cm-kl.hinetwork.tw, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-672.9KB/s(Youtube:不良林), server: gz-cm-kl.hinetwork.tw, port: 11136, type: trojan, password: d46abf38-3a4c-3dfc-91e0-d8d3f1616c73, sni: gz-cm-kl.hinetwork.tw, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-254.0KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.42MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林), server: 3.2.1.fuckppppp.today, port: 60302, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-352.1KB/s(Youtube:不良林), server: 611hk01.fans8.xyz, port: 443, type: trojan, password: f5362b9a-812f-4d77-89a3-09f7d0851bfb, sni: 611hk01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.50MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇯🇵 日本-3.41MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.13MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-3.82MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-325.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-223.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-499.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-422.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-672.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-254.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.50MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-325.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-223.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-499.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-422.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-672.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-254.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.50MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-325.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-223.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-499.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-422.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-672.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-254.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.50MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-325.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-223.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-499.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-422.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-672.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-254.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.50MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-325.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-223.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-499.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-422.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-672.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-254.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.50MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-325.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-223.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-499.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-422.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-672.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-254.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.50MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-325.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-223.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-396.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-499.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-422.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-672.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-254.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.50MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
