--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-254.0KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.42MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-239.0KB/s(Youtube:不良林), server: 611hk01.fans8.xyz, port: 443, type: trojan, password: f5362b9a-812f-4d77-89a3-09f7d0851bfb, sni: 611hk01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.37MB/s(Youtube:不良林), server: 67us01.fans8.xyz, port: 443, type: trojan, password: f5362b9a-812f-4d77-89a3-09f7d0851bfb, sni: 67us01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.62MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林), server: 3.2.1.fuckppppp.today, port: 60302, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-352.1KB/s(Youtube:不良林), server: 611hk01.fans8.xyz, port: 443, type: trojan, password: f5362b9a-812f-4d77-89a3-09f7d0851bfb, sni: 611hk01.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.50MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇯🇵 日本-3.41MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-2.25MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-9.73MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-203.0KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇬🇧 英国-1.13MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-3.82MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 未知国家-5.20MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-254.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
       - 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-203.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
+      - 未知国家-5.20MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-254.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
       - 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-203.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
+      - 未知国家-5.20MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-254.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
       - 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-203.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
+      - 未知国家-5.20MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-254.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
       - 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-203.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
+      - 未知国家-5.20MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-254.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
       - 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-203.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
+      - 未知国家-5.20MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-254.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
       - 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-203.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
+      - 未知国家-5.20MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-254.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
       - 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-203.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
+      - 未知国家-5.20MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
