--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-239.0KB/s(Youtube:不良林), server: 611hk01.fans8.xyz, port: 443, type: trojan, password: f5362b9a-812f-4d77-89a3-09f7d0851bfb, sni: 611hk01.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.37MB/s(Youtube:不良林), server: 67us01.fans8.xyz, port: 443, type: trojan, password: f5362b9a-812f-4d77-89a3-09f7d0851bfb, sni: 67us01.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.62MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林), server: 3.2.1.fuckppppp.today, port: 60302, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-2.25MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-9.73MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.91MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
+  - {name: 🇨🇳 中国-4.09MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-203.0KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.13MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-3.82MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 未知国家-5.20MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
+  - {name: 🇺🇸 美国-3.37MB/s(Youtube:不良林), server: 67us01.fans8.xyz, port: 443, type: trojan, password: f5362b9a-812f-4d77-89a3-09f7d0851bfb, sni: 67us01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-576.2KB/s(Youtube:不良林), server: b5d28a9.sd.gladns.com, port: 8474, type: ss, cipher: chacha20-ietf-poly1305, password: a501c82c72d790b8}
+  - {name: 🇬🇧 英国-3.06MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-17.04MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.07MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-439.2KB/s(Youtube:不良林), server: 150.230.99.46, port: 22222, type: vmess, uuid: e6c55d36-022c-4ebc-b9c2-e1220a7184f4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-239.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-203.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
-      - 未知国家-5.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-576.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-439.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-239.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-203.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
-      - 未知国家-5.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-576.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-439.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-239.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-203.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
-      - 未知国家-5.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-576.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-439.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-239.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-203.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
-      - 未知国家-5.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-576.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-439.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-239.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-203.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
-      - 未知国家-5.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-576.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-439.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-239.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-203.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
-      - 未知国家-5.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-576.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-439.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-239.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-14.40MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.73MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-203.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.82MB/s(Youtube:不良林)
-      - 未知国家-5.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-576.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-439.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
